[Fixed] Fixing support for zip